--- a/main.css
+++ b/main.css
@@ -3,35 +3,95 @@
 @tailwind utilities;
 
 @layer utilities {
-  .name-btn {
-    @apply text-white bg-black md:text-[16px] text-sm font-semibold rounded py-0.5 px-1.5 cursor-pointer dark:bg-[#5677AC] dark:hover:bg-[#6592da64];
+  .header-link{
+    @apply md:text-lg text-xs md:font-semibold font-medium;
+  }
+  .header-btn{
+    @apply bg-[#F44335] text-white md:px-5 px-3 md:py-2 py-1 md:text-lg font-medium text-xs rounded hover:bg-[#ff291a] hover:transition-all hover:duration-300;
   }
 
-  .news-title {
-    @apply text-[#333333] md:text-2xl text-lg font-semibold md:pt-8 md:pb-4 pt-4 pb-2 dark:text-white;
+
+  .hero-section{
+    @apply container grid md:grid-cols-2 grid-cols-1 mx-auto gap-2 p-5 md:py-10 py-5 md:px-10 px-5;
+  }
+  .hero-tag{
+    @apply text-[18px] font-semibold text-[#20484F] dark:text-gray-300;
+  }
+  .hero-title{
+    @apply md:text-[64px] text-[48px] text-[#072125] font-semibold md:my-6 my-4 leading-tight dark:text-gray-200 ;
+  }
+  .hero-pera{
+    @apply text-[#072125] text-[18px] font-normal md:mb-8 mb-4 md:mt-12 mt-8 dark:text-gray-400;
+  }
+  .cls-num{
+    @apply text-[#00FF84] md:text-[24px] text-[18px] font-bold;
   }
 
-  .card-body {
-    @apply flex flex-col md:flex-row gap-7 border border-[#dde2e5] md:p-5 p-2 my-5 hover:scale-105 hover:transition-all hover:duration-300;
+  .video-nam{
+    @apply text-[#2D3142] md:text-[18px] text-[16px] font-medium dark:text-gray-300;
+  }
+  .course-details{
+    @apply flex items-center text-center leading-snug  md:gap-x-10 gap-x-6 md:mb-8 mb-4;
+  }
+  .sign-btn{
+    @apply bg-[#F44335] text-white md:px-5 px-3 md:py-2 py-1 md:text-lg font-medium text-xs rounded hover:outline-[1px] hover:outline-[#F44335] hover:bg-white border border-[#F44335] hover:text-[#F44335] hover:transition-all hover:duration-300;
+  }
+  .learn-btn{
+    @apply outline outline-[1px] outline-[#F44335] text-[#F44335] md:px-5 px-3 md:py-2 py-1 md:text-lg font-medium text-xs rounded hover:outline-[1px]  hover:text-white hover:bg-[#F44335] hover:transition-all hover:duration-300 dark:text-gray-200;
   }
 
-  .tag {
-    @apply text-xs md:text-sm bg-[#5677AC26] py-0.5 px-1.5 hover:bg-black font-semibold uppercase hover:text-white rounded-sm transition-all cursor-pointer dark:bg-[#6592da64] dark:hover:bg-[#5677AC] dark:hover:text-white;
 
-  }
-
-  .tag-title{
-    @apply dark:text-white text-[#000000] font-medium pb-3;
+  .logo-section{
+    @apply container mx-auto grid md:grid-cols-4 grid-cols-2 items-center md:gap-x-10;
   }
 
-  .markets{
-    @apply md:text-lg text-sm font-semibold text-[#333333] bg-[#E6EBF3] rounded-full md:py-4 py-2 w-full text-center hover:transition-all hover:duration-300 hover:scale-105 cursor-pointer;
+  
+  .learn-section{
+    @apply container mx-auto md:py-16 py-10 grid md:grid-cols-2 grid-cols-1 md:gap-x-5 gap-x-3;
   }
-  .card-title{
-    @apply dark:text-white md:text-2xl text-lg font-semibold md:my-2 my-1 text-[#333333];
+  .learn-left{
+    @apply bg-white md:p-5 p-5 shadow-md shadow-gray-300 rounded-3xl dark:bg-gray-800;
+  }
+  .learn-title{
+    @apply text-[24px] text-[#000000] font-medium dark:text-gray-200;
+  }
+  .learn-body{
+    @apply flex items-center md:gap-x-5 gap-x-3 md:my-14;
+  }
+  .learn-icon{
+    @apply bg-[#f9ccc7] p-2 rounded-full text-[#F44335] self-start;
+  }
+  .learn-pera{
+    @apply text-[#353535] text-[18px] font-medium dark:text-gray-400;
+  }
+  .learn-btn{
+    @apply border border-[#F44335] rounded-full text-[18px] text-[#353535] font-medium py-2 px-3 dark:text-gray-300;
   }
 
-  .card-paragraph {
-    @apply dark:text-gray-400 text-[#616161] md:text-base text-sm mb-8 md:mb-12 mt-2;
+  .testimonial-section{
+    @apply container mx-auto grid md:grid-cols-2 grid-cols-1 items-center md:gap-x-10 ;
   }
+  .testimonial-left{
+    @apply bg-white shadow-md shadow-gray-300 rounded-3xl md:p-10 p-6 dark:bg-gray-700;
+  }
+  .testimonial-title{
+    @apply text-[24px] text-[#000000] font-medium dark:text-gray-100;
+  }
+  .testimonial-body{
+    @apply flex items-center gap-x-3 text-[18px] font-medium text-[#353535] dark:text-gray-400;
+  }
+
+
+  .certificate-btn{
+    @apply text-[#2D3142] border border-[#2D3142] px-8 py-2 rounded-full font-medium hover:text-[#000] hover:bg-[#00FF84] hover:transition-all hover:duration-300 dark:text-gray-400 hover:dark:text-white;
+  }
+
+
+  .footer-nav{
+    @apply text-[18px] text-[#20484F] font-semibold md:mb-5 mb-3 dark:text-gray-200;
+  }
+  .footer-link{
+    @apply text-[16px] text-[#20484F] font-normal cursor-pointer dark:text-gray-400;
+  }
+
 }
